[package]
name = "an"
version = "0.5.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
structopt = "0.3"
anyhow = "1.0"
regex = "1.3.1"
reqwest = {version="0.10.8", features=["blocking"]}
futures = "0.3"
tokio = {version = "0.2", features=["full"]}
lazy_static = "1.4.0"
