[package]
name = "an"
version = "0.15.0"
authors = ["Chris Davison <c.jr.davison@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3"
clap = { version = "3.1.2", features = ["derive", "cargo"] }
anyhow = "1.0"
tagsearch = "0.27.0"
mdlc = "~0.8.1"
rayon = "*"

[features]
links = []
